--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,7 @@
     font-style: normal;
     display: flex;
     padding: 0rem 2rem;
+    z-index: 1;
 }
 
 .icon {
@@ -222,12 +223,12 @@ header {
 
 .about-us {
     width: 100vw;
-    height: 120vh;
+    height: 110vh;
     display: flex;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-style: normal;
-    gap: 2vw;
+    gap: 5vw;
     padding: 20vh 10vw;
 }
 
@@ -236,6 +237,7 @@ header {
     font-optical-sizing: auto;
     font-weight: 500;
     font-size: 44px;
+    padding-top: 10vh;
 }
 
 .line-about {
@@ -249,6 +251,8 @@ header {
     padding-top: 20px;
     color: #535E69;
     line-height: 30px;
+    font-size: 20px;
+    font-weight: 350;
 }
 
 .image-7 {
@@ -288,7 +292,7 @@ header {
 .links-about {
     display: flex;
     padding-top: 40px;
-    gap: 60px;
+    gap: 30px;
 }
 
 .icon-link-1 {
@@ -320,4 +324,135 @@ header {
     font-style: normal;
     font-size: 16px;
     color: #D78C50;
+}
+
+.gallery {
+    width: 100%;
+    height: 145vh;
+    background-color: #f3f3f6;
+}
+
+.gallery h2 {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    font-family: "Playfair", serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    text-align: center;
+    font-size: 46px;
+}
+
+.gallery-down,
+.gallery-up {
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    gap: 5px;
+}
+
+.gallery-up {
+    margin-bottom: 5px;
+}
+
+.img-gallery-1 {
+    background: url(img/gallery1.png);
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 40%;
+}
+
+.img-gallery-2 {
+    background: url(img/gallery5.png);
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 30%;
+}
+
+.img-gallery-3 {
+    background: url(img/gallery3.png);
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 30%;
+}
+
+.img-gallery-4 {
+    background: url(img/gallery10.png);
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 30%;
+}
+
+.img-gallery-5 {
+    background: url(img/gallery11.png);
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 30%;
+}
+
+.img-gallery-6 {
+    background: url(img/gallery8.png);
+    background-position: top;
+    background-size: cover;
+    height: 100%;
+    width: 40%;
+}
+
+footer {
+    width: 100%;
+    height: 42vh;
+    background-color: #1A0D01;
+    color: #898785;
+    padding: 2%;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 16px;
+}
+
+.content-footer {
+    display: flex;
+    padding-left: 10vw;
+    gap: 22%;
+}
+
+.logo-footer {
+    background: url(img/logo.png);
+    background-size: cover;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    margin-bottom: 50px;
+}
+
+.column-footer {
+    width: 30%;
+}
+
+.social-icons ul {
+    padding-top: 33px;
+    list-style: none;
+    display: flex;
+    gap: 38px;
+    font-size: 25px;
+}
+
+.social-icons ul li a {
+    text-decoration: none;
+    color: #898785;
+}
+
+.footer-phase {
+    text-align: center;
+    align-self: flex-end;
+    padding-bottom: 6%;
+}
+
+.column-footer p a {
+    text-decoration: none;
+    color: #898785;
 }
