--- a/static/style.css
+++ b/static/style.css
@@ -456,3 +456,200 @@ footer {
     text-decoration: none;
     color: #898785;
 }
+
+@media (max-width: 991px) { 
+    .navbar-collapse {
+        background-color: rgba(0, 0, 0, 0.9);
+        padding: 10px;
+        border-radius: 10px;
+    }
+}
+
+@media (max-width: 750px) {
+    header {
+        height: 100vh;
+    }
+    .header-container {
+        padding-top: 20vh;
+        padding-left: 15%;
+        display: block;
+    }
+    .projects {
+        padding: 0rem;
+        height: 320vh;
+    }
+
+    .container {
+        display: block;
+    }
+
+    .column {
+        width: 100%;
+        height: 50%;
+        margin-bottom: 5%;
+    }
+
+    .project-card{
+        display: block;
+        height: 50%;
+    }
+
+    .project-image{
+        width: 80%;
+        height: 100%;
+        margin-left: 10%;
+    }
+
+    .project-info{
+        width: 90%;
+        padding-top: 0;
+        padding-left: 5%;
+    }
+
+    .project-info p {
+        font-size: 12px;
+    }
+
+    .info-left {
+        text-align: center;
+    }
+    
+    .info-right {
+        text-align: center
+    }
+
+    .tools-left ul {
+        justify-content: center;
+    }
+
+    .used-tools ul{
+        justify-content: center;
+    }
+
+    .used-tools-down-rs  ul li{
+        color: aliceblue;
+    }
+
+    .column-down{
+        padding-top: 15%;
+        background-color: #297778;
+        color: aliceblue;
+    }
+
+    .about-us {
+        height: 130vh;
+        display: block;
+        padding: 0vh 10vw;
+    }
+
+    .rigth {
+        width: 85vw;
+    }
+    
+    .left {
+        width: 85vw;
+    }
+
+    .links-about {
+        display: block;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        text-align: center;
+        gap: 30px;
+    }
+
+    .image-7{
+        left: 80px;
+        width: 60vw;
+        height: 50vw;
+    }
+
+    .image-8{
+        top: -20vw;
+        width: 44vw;
+        height: 40vw;
+    }
+
+    .gallery-down, .gallery-up {
+    height: 43%;
+    display: block;
+    }
+
+    .img-gallery-1 {
+        height: 33%;
+        width: 100%;
+    }
+    
+    .img-gallery-2 {
+        height: 33%;
+        width: 100%;
+    }
+    
+    .img-gallery-3 {
+        height: 33%;
+        width: 100%;
+    }
+    
+    .img-gallery-4 {
+        height: 33%;
+        width: 100%;
+    }
+    
+    .img-gallery-5 {
+        height: 33%;
+        width: 100%;
+    }
+    
+    .img-gallery-6 {
+        height: 33%;
+        width: 100%;
+    }
+
+    footer {
+        height: 72vh;
+    }
+
+    .content-footer {
+        display: block;
+        padding-left: 3vw;
+    }
+
+    .column-footer {
+        width: 80%;
+    }
+
+    .footer-phase {
+        text-align: center;
+        padding-top: 6%;
+    }
+}
+
+@media (min-width: 750px) and (max-width: 1600px){
+    .projects {
+        padding: 5rem;
+        height: 260vh;
+    }
+    .project-info {
+        padding-top: 1rem;
+    }
+    .project-info h3 {
+        font-size: 20px;
+    }
+    .project-info p {
+        font-size: 12px;
+    }
+    .about-us {
+        height: 120vh;
+        gap: 6vw;
+        padding: 15vh 10vw;
+    }
+    .left h2 {
+        padding-top: 8vh;
+    }
+    .left p {
+        font-size: 16px;
+    }
+    footer {
+        height: 55vh;
+    }
+}
