--- a/static/style.css
+++ b/static/style.css
@@ -96,7 +96,7 @@ header {
 /*Style section projects*/
 .projects {
     padding: 5rem;
-    height: 140vh;
+    height: 200vh;
     background-color: #F7F2EC;
 }
 
@@ -116,7 +116,7 @@ header {
 
 .column {
     width: 50%;
-    height: 100%;
+    height: 80%;
 
 }
 
@@ -204,19 +204,31 @@ header {
 }
 
 .image-4 {
-    background: url("./img/img-project-wordle.png");
+    background: url("./img/img-project-ecampus.png");
     background-position: center;
     background-size: cover;
 }
 
 .image-5 {
-    background: url("./img/img-project-neutral.png");
+    background: url("./img/img-project-wordle.png");
     background-position: center;
     background-size: cover;
 }
 
 .image-6 {
+    background: url("./img/img-project-neutral.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.image-7 {
     background: url("./img/img-project-fruits.png");
+    background-position: center;
+    background-size: cover;
+}
+
+.image-8 {
+    background: url("./img/img-project-philosophy.png");
     background-position: center;
     background-size: cover;
 }
@@ -255,7 +267,7 @@ header {
     font-weight: 350;
 }
 
-.image-7 {
+.image-9 {
     position: relative;
     left: 80px;
     width: 30vw;
@@ -268,7 +280,7 @@ header {
     border: solid 8px white;
 }
 
-.image-8 {
+.image-10 {
     position: relative;
     top: -10vw;
     width: 20vw;
@@ -476,7 +488,7 @@ footer {
     }
     .projects {
         padding: 0rem;
-        height: 320vh;
+        height: 400vh;
     }
 
     .container {
@@ -496,8 +508,12 @@ footer {
 
     .project-image{
         width: 80%;
-        height: 100%;
+        height: 95%;
         margin-left: 10%;
+    }
+
+    .row{
+        height: 25%;
     }
 
     .project-info{
@@ -558,13 +574,13 @@ footer {
         gap: 30px;
     }
 
-    .image-7{
+    .image-9{
         left: 80px;
         width: 60vw;
         height: 50vw;
     }
 
-    .image-8{
+    .image-10{
         top: -20vw;
         width: 44vw;
         height: 40vw;
